--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -102,7 +102,7 @@
 	"Receive":"Receive",
 	"Receive on":"Receive on",
 	"Advance Decorative Laminates":"Advance Decorative Laminates",
-	"Products":"Products",
+	"Category":"Category",
 	"Latest News":"Latest News",
 	"Videos":"Videos",
 	"Feedback":"Feedback",
