--- a/src/assets/i18n/hin.json
+++ b/src/assets/i18n/hin.json
@@ -109,7 +109,7 @@
       "Receive":"रिसीव",
       "Receive on":"रिसीव ऑन",
       "Advance Decorative Laminates":"ऐड्वैन्स डेकरटिव लैमनैटस",
-      "Products":"प्रोडक्टस",
+      "Category":"वर्ग",
       "Latest News":"ताज़ा खबर",
       "Videos":"वीडियोस",
       "Feedback":"फीड्बैक",
