--- a/src/assets/i18n/hin.json
+++ b/src/assets/i18n/hin.json
@@ -200,6 +200,7 @@
       "Your document details are missing":"आपके दस्तावेज़ विवरण गायब हैं",
 	"Are you sure to redeem your":"क्या आप निश्चित रूप से अपना रिडीम करना चाहते हैं",
 	"points":"अंक",
+      "Points":"अंक",
 	"Enter your 6 digit number that sent to":"अपना 6 अंकों का नंबर दर्ज करें जिसे भेजा गया",
 	"Same as Permanent Address":"स्थायी पते के समान",
       "Same as login number":"लॉगिन नंबर के समान",
@@ -213,6 +214,11 @@
       "Other":"अन्य",
       "Other Type":"अन्य प्रकार",
       "Architect Points":"वास्तुकार अंक",
+      "Documents are missing Please update your documents":"दस्तावेज़ गुम हैं कृपया अपने दस्तावेज़ अपडेट करें",
       "Reason":"कारण",
-      "Architect Points Detail":"वास्तुकार अंक विवरण"
+      "Update detail":"विवरण अपडेट करें",
+      "Bank details are missing Please update your bank details":"बैंक विवरण गायब हैं कृपया अपना बैंक विवरण अपडेट करें",
+      "Architect Points Detail":"वास्तुकार अंक विवरण",
+      "Account Holder Name":"खाताधारक का नाम",
+      "Cancellation Policy":"रद्द करने की नीति"
 }
