--- a/src/assets/i18n/hin.json
+++ b/src/assets/i18n/hin.json
@@ -55,8 +55,8 @@
       "Gallery":"गेलरी",
       "Cancel":"रद्द करें",
       "Registered Successfully":"सफलतापूर्वक पंजीकृत",
-	"Grassim":"ग्रासिम",
-      "Your request to access the Grassim  is under review. You will be able to log in as soon as the overseeing dealer acknowledges your application":"ग्रासिम तक पहुँचने के आपके अनुरोध की समीक्षा की जा रही है। जैसे ही ओवरसीइंग डीलर आपके आवेदन को स्वीकार करेगा, आप लॉग इन कर पाएंगे",
+	"Kridha Laminates":"कृधा लैमिनेट्स",
+      "Your request to access the Kridha Laminates  is under review. You will be able to log in as soon as the overseeing dealer acknowledges your application":"कृधा लैमिनेट्स तक पहुँचने के आपके अनुरोध की समीक्षा की जा रही है। जैसे ही ओवरसीइंग डीलर आपके आवेदन को स्वीकार करेगा, आप लॉग इन कर पाएंगे",
       "Meanwhile, you can contact us":"इस बीच, आप हमसे संपर्क कर सकते हैं",
       "or mail us":"या हमें मेल करें",
       "if you any question":"किसी भी प्रश्न के लिए",
