add business number  & version 1.8.0 update

--- a/src/assets/i18n/hin.json
+++ b/src/assets/i18n/hin.json
@@ -55,7 +55,7 @@
       "Gallery":"गेलरी",
       "Cancel":"रद्द करें",
       "Registered Successfully":"सफलतापूर्वक पंजीकृत",
-	"Grassim":"ग्रासिम",
+      "Grassim":"ग्रासिम",
       "Your request to access the Grassim  is under review. You will be able to log in as soon as the overseeing dealer acknowledges your application":"ग्रासिम तक पहुँचने के आपके अनुरोध की समीक्षा की जा रही है। जैसे ही ओवरसीइंग डीलर आपके आवेदन को स्वीकार करेगा, आप लॉग इन कर पाएंगे",
       "Meanwhile, you can contact us":"इस बीच, आप हमसे संपर्क कर सकते हैं",
       "or mail us":"या हमें मेल करें",
@@ -157,56 +157,56 @@
       "TOTAL":"टोटल",
       "Share App":"ऐप साझा करें",
       "Notification":"नोटफकैशन",
-	"Scan History":"स्कैन हिस्ट्री",
+      "Scan History":"स्कैन हिस्ट्री",
       "Earn INR":"आईएनआर कमाएं",
       "Gift Tracker":"गिफ्ट ट्रैकर",
       "Yes":"हाँ",
-	"No":"नहीं",
-	"Are you sure":"क्या आप वाकई बदलना चाहते हैं?",
-	"Karigar":"कारीगर",
-	"Contractor":"ठेकेदार",
-	"Architect":"वास्तुकार",
+      "No":"नहीं",
+      "Are you sure":"क्या आप वाकई बदलना चाहते हैं?",
+      "Karigar":"कारीगर",
+      "Contractor":"ठेकेदार",
+      "Architect":"वास्तुकार",
       "Do you want to change the language?":"क्या आप भाषा बदलना चाहते हैं?",
       "Are you sure you want Logout?":"क्या आप वाकई लॉगआउट चाहते हैं?",
       "Logout":"लॉग आउट",
       "Contractor Information":"ठेकेदार सूचना",
       "Date of Anniversary":"वर्षगांठ की तारीख",
       "Whats App Number":"व्हाट्स एप नंबर",
-	"New Arrivals":"नए आगमन",
+      "New Arrivals":"नए आगमन",
       "Offer Products":"ऑफ़र उत्पाद",
       "About Us":"हमारे बारे में",
       "View Product":"उत्पाद देखें",
       "Product":"उत्पाद",
       "Category":"श्रेणी",
       "All":"सब",
-	"Approved":"स्वीकृत",
-	"Reject":"अस्वीकार",
-	"Dealer Detail":"डीलर विवरण",
-	"Item Name":"वस्तु का नाम",
-	"Quantity":"मात्रा",
-	"Save":"सहेजें",
-	"Add To List":"सूची में जोड़ें",
-	"Add New":"नया जोड़ें",
-	"Contractor INR":"ठेकेदार आईएनआर",
-	"Contractor INR Detail":"ठेकेदार आईएनआर विवरण",
-	"Date":"तारीख",
-	"Status":"स्थिति",
-	"Items Detail":"वस्तु विवरण",
+      "Approved":"स्वीकृत",
+      "Reject":"अस्वीकार",
+      "Dealer Detail":"डीलर विवरण",
+      "Item Name":"वस्तु का नाम",
+      "Quantity":"मात्रा",
+      "Save":"सहेजें",
+      "Add To List":"सूची में जोड़ें",
+      "Add New":"नया जोड़ें",
+      "Contractor INR":"ठेकेदार आईएनआर",
+      "Contractor INR Detail":"ठेकेदार आईएनआर विवरण",
+      "Date":"तारीख",
+      "Status":"स्थिति",
+      "Items Detail":"वस्तु विवरण",
       "Size":"आकार",
       "Quantity":"मात्रा",
-	"Length":"लंबाई",
-	"Width":"चौड़ाई",
+      "Length":"लंबाई",
+      "Width":"चौड़ाई",
       "Carpenter":"बढ़ई",
       "Your document details are missing":"आपके दस्तावेज़ विवरण गायब हैं",
-	"Are you sure to redeem your":"क्या आप निश्चित रूप से अपना रिडीम करना चाहते हैं",
-	"points":"अंक",
+      "Are you sure to redeem your":"क्या आप निश्चित रूप से अपना रिडीम करना चाहते हैं",
+      "points":"अंक",
       "Points":"अंक",
-	"Enter your 6 digit number that sent to":"अपना 6 अंकों का नंबर दर्ज करें जिसे भेजा गया",
-	"Same as Permanent Address":"स्थायी पते के समान",
+      "Enter your 6 digit number that sent to":"अपना 6 अंकों का नंबर दर्ज करें जिसे भेजा गया",
+      "Same as Permanent Address":"स्थायी पते के समान",
       "Same as login number":"लॉगिन नंबर के समान",
-	"Enter Shipping Address":"शिपिंग पता दर्ज करें",
-	"I have read":"मैंने पढ़ा है",
-	"cancelation policy":"रद्द करने की नीति",
+      "Enter Shipping Address":"शिपिंग पता दर्ज करें",
+      "I have read":"मैंने पढ़ा है",
+      "cancelation policy":"रद्द करने की नीति",
       "INR":"आईएनआर",
       "Scan Point":"स्कैन प्वाइंट",
       "Thickness":"मोटाई",
@@ -220,5 +220,11 @@
       "Bank details are missing Please update your bank details":"बैंक विवरण गायब हैं कृपया अपना बैंक विवरण अपडेट करें",
       "Architect Points Detail":"वास्तुकार अंक विवरण",
       "Account Holder Name":"खाताधारक का नाम",
-      "Cancellation Policy":"रद्द करने की नीति"
+      "Cancellation Policy":"रद्द करने की नीति",
+      "Letterhead":"लेटर हेड",
+      "Registration Number":"पंजीकरण क्रमांक",
+      "Select Number Type":"संख्या प्रकार चुनें",
+      "Business Details":"व्यापार विवरण",
+      "GST Number":"जीएसटी नंबर",
+      "Upload Document Image / Letter Head":"दस्तावेज़ छवि / पत्र शीर्ष अपलोड करें"
 }
